<resources>
    <string name="app_name">Event Check-In</string>
    <string name="see_more">Ver mais</string>
    <string name="address_placeholder"><![CDATA[<b>Local:</b><br />%s]]></string>
    <string name="date_placeholder"><![CDATA[<b>Data do Evento:</b><br />%s]]></string>
    <string name="checkin">Cheguei :)</string>
    <string name="name_placeholder">Seu nome:</string>
    <string name="email_placeholder">Seu email:</string>
    <string name="checkin_action">fazer check-in</string>
    <string name="checkin_title">Registrar Entrada</string>
    <string name="invalid_email">Email inválido</string>
    <string name="invalid_name">Nome inválido</string>
    <string name="welcome">Seja Bem Vindo 🤗</string>
    <string name="success_checkin">Checkin realizado com sucesso</string>
    <string name="action_close">Fechar</string>
    <string name="default_error">Todo mundo erra e dessa vez foram os nossos servidores 😰</string>
    <string name="action_try_again">Tentar Novamente</string>
    <string name="ops">"Ops! "</string>
    <string name="events">Eventos</string>
    <string name="share_subject">Compartilhar</string>
    <string name="share_using">Compartilhar Usando</string>
</resources>