<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/verticalMargin"
        android:orientation="horizontal">
        <TextView
            android:textSize="@dimen/textTitle"
            android:text="@string/checkin_title"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/horizontalMargin"
            android:layout_marginEnd="@dimen/horizontalMargin"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/checkingCloseIv"
            app:srcCompat="@drawable/ic_close"
            android:layout_marginEnd="@dimen/horizontalMargin"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/checkingNameTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/verticalMargin"
        android:layout_marginStart="@dimen/horizontalMargin"
        android:layout_marginEnd="@dimen/horizontalMargin">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/name_placeholder"
            android:maxLines="@integer/max_line_name"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/checkingEmailTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/verticalMargin"
        android:layout_marginStart="@dimen/horizontalMargin"
        android:layout_marginEnd="@dimen/horizontalMargin">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/email_placeholder"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/checkingSubscribeBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontalMargin"
        android:layout_marginTop="@dimen/verticalMargin"
        android:layout_marginEnd="@dimen/horizontalMargin"
        android:layout_marginBottom="@dimen/verticalMargin"
        android:text="@string/checkin_action" />

    <ProgressBar
        android:id="@+id/checkingLoadingPb"
        android:layout_marginTop="@dimen/verticalMargin"
        android:layout_marginBottom="@dimen/verticalMargin"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>